--- a/views/user/about.ejs
+++ b/views/user/about.ejs
@@ -1,4 +1,4 @@
-<%-include("partials/header")%>
+<%-include("../partials/header")%>
     <div class="bg-light py-3">
       <div class="container">
         <div class="row">
@@ -139,4 +139,4 @@
     </div>
 
     
-     <%-include("partials/footer.ejs")-%>
+     <%-include("../partials/footer.ejs")-%>
