--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -1,4 +1,4 @@
-<%-include("partials/header")%>
+<%-include("../partials/header")%>
   <h1>Contact Us</h1>
     <form class="formBox"  action="" method="post">
         <div class="form-group">
@@ -20,4 +20,4 @@
         <button type="submit" class="btn btn-primary">Send</button>
       </form>
 
-      <%-include("partials/footer")%>
+      <%-include("../partials/footer")%>
