--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,5 +1,5 @@
 
-<%-include("partials/header")%>
+<%-include("../partials/header")%>
     <div class="site-blocks-cover" style="background-image: url(images/imageNew2.png);" data-aos="fade">
       <div class="container">
         <div class="row align-items-start align-items-md-center justify-content-end">
@@ -186,4 +186,4 @@
         </div>
       </div>
     </div>
-    <%-include("partials/footer")-%>
+    <%-include("../partials/footer")-%>
