--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,4 +1,4 @@
-<%-include("./layout/layout")%>
+<%-include("../layout/layout")%>
 <body>
   <section class="vh-100" style="background-color: #e4e7ec;">
     <div class="container py-5 h-100">
