--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -1,4 +1,4 @@
-<%-include("partials/header")%>
+<%-include("../partials/header")%>
   
       <div class="bg-light py-3">
       <div class="container">
@@ -276,4 +276,4 @@
       </div>
     </div>
 
-    <%-include("partials/footer.ejs")-%>
+    <%-include("../partials/footer.ejs")-%>
