--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -1,4 +1,4 @@
-<%-include("partials/header")%>
+<%-include("../partials/header")%>
 
     <div class="bg-light py-3">
       <div class="container">
@@ -336,4 +336,4 @@
       </div>
     </div>
 
-    <%-include("partials/footer.ejs")-%>
+    <%-include("../partials/footer.ejs")-%>
