--- a/views/user/thankyou.ejs
+++ b/views/user/thankyou.ejs
@@ -1,4 +1,4 @@
-<%-include("partials/header")%>
+<%-include("../partials/header")%>
 
     <div class="bg-light py-3">
       <div class="container">
@@ -21,4 +21,4 @@
       </div>
     </div>
 
-    <%-include("partials/footer")%>
+    <%-include("../partials/footer")%>
