--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -33,17 +33,17 @@
             </li>
             <li>
               <a href="/admin/category" class="nav-link px-0 align-middle">
-                <img src="/adminimages/pic2.jpg" alt="" style="width: 1rem" />
+                <img src="" alt="" style="width: 1rem" />
                 <span class="ms-1 d-none d-sm-inline text-white">Category</span>
               </a>
             </li>
             <li>
-              <a href="/admin/productdetails" class="nav-link px-0 align-middle">
+              <a href="/admin/productDetails" class="nav-link px-0 align-middle">
                 <img src="/adminimages/pic3.jpg" alt="" style="width: 1rem" /><span
                   class="ms-1 d-none d-sm-inline text-white">Products</span></a>
             </li>
             <li>
-              <a href="/admin/addproducts" class="nav-link px-0 align-middle">
+              <a href="/admin/addProduct" class="nav-link px-0 align-middle">
                 <img src="/adminimages/pic4.jpg" alt="" style="width: 1rem" />
                 <span class="ms-1 d-none d-sm-inline text-white">Add Products</span></a>
             </li>
@@ -65,11 +65,6 @@
         </div>
       </div>
       <div class="col  py-3">
-        <h1>Hi admin this is your home page</h1>
-        <h1>Hi admin this is your home page</h1> <h1>Hi admin this is your home page</h1>
-        <h1>Hi admin this is your home page</h1>
-
-
       </div>
     </div>
   </div>
