--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -49,7 +49,9 @@
                     <input type="password" id="confirmPassword" name="confirmPassword" class="form-control form-control-lg" />
                     <small id="confirmPasswordError" class="text-danger err"></small>
                   </div>
-  
+                  <% if(locals.invalid){%>
+                    <small class="text-danger"><%=invalid%></small>
+                <%}%>    
                   <div class="form-check d-flex justify-content-center mb-5">
                     <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
                     <label class="form-check-label" for="form2Example3g">
