otp verification done

--- a/views/user/otp.ejs
+++ b/views/user/otp.ejs
@@ -30,7 +30,7 @@
                 <button type="submit" value="Submit" class="btn btn-success btn-lg mt-3">Submit</button>
               </div>
             
-            <div class="text-center mt-0"><span class="d-block mobile-text">Thank you for joining our family</span><span class="font-weight-bold text-danger cursor">FRUTICA</span></div>
+            <div class="text-center mt-0"><span class="d-block mobile-text">Thank you for joining our family</span><span class="font-weight-bold text-danger cursor">WonderShoes</span></div>
         </div>
         </form>
     </div>
