--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -52,7 +52,7 @@
               <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                 <div class="block-4 text-center border">
                   <figure class="block-4-image">
-                    <a href="shop-single.html"><img src="images/cloth_1.jpg" alt="Image placeholder"
+                    <a href="/productView"><img src="images/cloth_1.jpg" alt="Image placeholder"
                         class="img-fluid"></a>
                   </figure>
                   <div class="block-4-text p-4">
