added product view page

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -33,9 +33,9 @@
         <div class="col-md-6 col-lg-3 mb-4 mb-lg-0">
           <h3 class="footer-heading mb-4">Promo</h3>
           <a href="#" class="block-6">
-            <img src="images/logo.png" alt="Image placeholder" class="img-fluid rounded mb-4">
+            <img src="/images/logo.png" alt="Image placeholder" class="img-fluid rounded mb-4">
             <h3 class="font-weight-light  mb-0">Finding Your Perfect Shoes</h3>
-            <p>Promo from  nuary 15 &mdash; 25, 2019</p>
+            <p>Since &mdash;  2022</p>
           </a>
         </div>
         <div class="col-md-6 col-lg-3">
@@ -63,7 +63,7 @@
         <div class="col-md-12">
           <p>
           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
+          Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | made <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">@muhammadarshad8935@gmail.com</a>
           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </p>
         </div>
@@ -73,15 +73,23 @@
   </footer>
 </div>
 
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/jquery-ui.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/aos.js"></script>
+<script src="http://localhost:3000/js/jquery-3.3.1.min.js"></script>
+<script src="http://localhost:3000/js/jquery-ui.js"></script>
+<script src="http://localhost:3000/js/popper.min.js"></script>
+<script src="http://localhost:3000/js/bootstrap.min.js"></script>
+<script src="http://localhost:3000/js/owl.carousel.min.js"></script>
+<script src="http://localhost:3000/js/jquery.magnific-popup.min.js"></script>
+<script src="http://localhost:3000/js/aos.js"></script>
 
 <script src="js/main.js"></script>
   
 </body>
 </html>
+
+
+
+
+
+
+ashmila jasmin ashmila jasmin ashm
+oi--`
