--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -80,16 +80,9 @@
 <script src="http://localhost:3000/js/owl.carousel.min.js"></script>
 <script src="http://localhost:3000/js/jquery.magnific-popup.min.js"></script>
 <script src="http://localhost:3000/js/aos.js"></script>
-
+<script src="http://localhost:3000/js/ajaxrequests.js"></script>
 <script src="js/main.js"></script>
   
 </body>
 </html>
 
-
-
-
-
-
-ashmila jasmin ashmila jasmin ashm
-oi--`
