--- a/views/user/productView.ejs
+++ b/views/user/productView.ejs
@@ -45,7 +45,7 @@
             </div>
 
             </div>
-            <p><a href="/cart" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
+            <p><a href="/cart/<%=product._id%>" class="buy-now btn btn-sm btn-primary">Add To Cart</a></p>
 
           </div>
         </div>
