--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/solid.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
@@ -21,25 +22,25 @@
           <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
             <li class="nav-item">
               <a href="/admin/dashboard" class="nav-link align-middle px-0">
-                <img src="/adminimages/pic1.jpg" alt="" style="width: 1rem" /><span
+                <img src="/adminImages/dashboard.jpg" alt="" style="width: 1rem" /><span
                   class="ms-1 d-none d-sm-inline">Dashboard</span>
               </a>
             </li>
             <li>
               <a href="admin/order" class="nav-link px-0 align-middle">
-                <img src="/adminimages/pic2.jpg" alt="" style="width: 1rem" />
+                <img src="/adminImages/order.jpg" alt="" style="width: 1rem" />
                 <span class="ms-1 d-none d-sm-inline">Order</span>
               </a>
             </li>
             <li>
               <a href="/admin/category" class="nav-link px-0 align-middle">
-                <img src="/adminimages/pic2.jpg" alt="" style="width: 1rem" />
+                <img src="/adminImages/category.jpg" alt="" style="width: 1rem" />
                 <span class="ms-1 d-none d-sm-inline">category</span>
               </a>
             </li>
             <li>
               <a href="/admin/productdetails" class="nav-link px-0 align-middle">
-                <img src="/adminimages/pic3.jpg" alt="" style="width: 1rem" /><span
+                <img src="/adminImages/product.pg" alt="" style="width: 1rem" /><span
                   class="ms-1 d-none d-sm-inline">Products</span></a>
             </li>
             <li>
@@ -71,31 +72,31 @@
               <h1>Add Product</h1>
             </div>
             <div class="form-outline flex-fill mb-0 mt-4">
-              <input type="text" placeholder="Product name" name="name" id="p-name"
+              <input type="text" required placeholder="Product name" name="product_name" id="product_name"
                 class="form-control" />
             </div>
             <div class="form-outline flex-fill mb-0 mt-4">
-              <input type="text" placeholder="Price" name="price" id="price" class="form-control" />
+              <input type="text" required placeholder="Price" name="price" id="price" class="form-control" />
             </div>
             <div class="form-outline flex-fill mb-0 mt-4">
-              <input type="text" placeholder="Category" name="category" id="category" class="form-control" />
-              <!-- <select class="form-select "   aria-label="Default select example">
-                <option selected disabled>Category</option>
               
-                <option value="hwollooo" ></option>
-             
+              <select required class="form-select " name="category" id="category"   aria-label="Default select example">
+                <option selected disabled >Category</option>
+                <% category.forEach((categories)=> {%>
+                <option value="<%=categories.category_name%>" ><%=categories.category_name%></option>
+                <% }) %>
                 
-              </select> -->
+              </select>
             </div>
             <div class="form-outline flex-fill mb-0 mt-4">
-              <input type="text" placeholder="Description" name="description" id="description" class="form-control" />
+              <input type="text" required  placeholder="Description" name="description" id="description" class="form-control" />
             </div>
             <div class="form-outline flex-fill mb-0 mt-4">
-              <input type="text" placeholder="stock" name="stock" id="stock" class="form-control" />
+              <input type="text" required  placeholder="Stock" name="stock" id="stock" class="form-control" />
             </div>
             <div class="form-outline flex-fill mb-0 mt-4">
-              <input class="form-control" placeholder="Product image" type="file" name="pImage"
-                id="image">
+              <input class="form-control" required  placeholder="Product image" type="file" name="product_image"
+                id="product_image">
             </div>
             <div class="d-flex justify-content-center mt-4 ">
               <button type="submit" class="btn btn-success btn-block mb-4">Add product</button>
@@ -112,5 +113,3 @@
     crossorigin="anonymous"></script>
 
 </body>
-
-</html>
