--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -1,4 +1,69 @@
-<%- include('../partials/adminSidebar')%>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/solid.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+</head>
+
+<body>
+  <div class="container-fluid">
+    <div class="row flex-nowrap">
+      <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0" style="background-color: #080a0c">
+        <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+          <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+            <span class="fs-5 d-none d-sm-inline">Admin</span>
+          </a>
+          <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+            <li class="nav-item">
+              <a href="/admin/dashboard" class="nav-link align-middle px-0">
+                <img src="/adminImages/dashboard.jpg" alt="" style="width: 1rem" /><span
+                  class="ms-1 d-none d-sm-inline">Dashboard</span>
+              </a>
+            </li>
+            <li>
+              <a href="admin/order" class="nav-link px-0 align-middle">
+                <img src="/adminImages/order.jpg" alt="" style="width: 1rem" />
+                <span class="ms-1 d-none d-sm-inline">Order</span>
+              </a>
+            </li>
+            <li>
+              <a href="/admin/category" class="nav-link px-0 align-middle">
+                <img src="/adminImages/category.jpg" alt="" style="width: 1rem" />
+                <span class="ms-1 d-none d-sm-inline">category</span>
+              </a>
+            </li>
+            <li>
+              <a href="/admin/productdetails" class="nav-link px-0 align-middle">
+                <img src="/adminImages/product.pg" alt="" style="width: 1rem" /><span
+                  class="ms-1 d-none d-sm-inline">Products</span></a>
+            </li>
+            <li>
+              <a href="/admin/addProduct" class="nav-link px-0 align-middle">
+                <img src="/adminimages/pic4.jpg" alt="" style="width: 1rem" />
+                <span class="ms-1 d-none d-sm-inline">Add Products</span></a>
+            </li>
+            <li>
+              <a href="/admin/userDetails" class="nav-link px-0 align-middle">
+                <img src="/adminimages/pic5.jpg" alt="" style="width: 1rem" />
+                <span class="ms-1 d-none d-sm-inline">Users</span>
+              </a>
+            </li>
+            <li>
+              <a href="/admin/adminLogout" class="nav-link px-0 align-middle">
+                <img src="/adminimages/pic6.jpg" alt="" style="width: 1rem" />
+                <span class="ms-1 d-none d-sm-inline">Logout</span>
+              </a>
+            </li>
+          </ul>
+          <hr />
+        </div>
+      </div>
 <!-- end admin sidebar -->
       <div class="col py-3">
         <div class="d-flex align-items-center justify-content-center">
@@ -34,7 +99,7 @@
                   <td>
                     <form action="/admin/editCategory/<%=catg._id%>" method="post">
                       <input placeholder="Edit category name" name="name" type="text" class="form-control w-50">
-                     <button type="submit" class="btn btn-success">Submit</button>
+                      <button type="submit" class="btn btn-success">Submit</button>
                     </form>
                 </td>
                 <td>
