--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -4,9 +4,12 @@
     <title>WonderShoes</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
   </head>
+  <body>
+   
     <section class="" style="background-color: #eae5e5fb; height: 100vh;">
         <div class="container py-5 h-100">
           <div class="row d-flex justify-content-center align-items-center h-100">
@@ -22,7 +25,7 @@
                   <div class="col-md-6 col-lg-7 d-flex align-items-center">
                     <div class="card-body p-4 p-lg-5 text-black">
       
-                      <form action="admin/login" method="POST">
+                      <form action="/admin/login" method="post">
       
                         <div class="d-flex align-items-center mb-3 pb-1">
                            
@@ -34,9 +37,7 @@
                         <div class="form-outline mb-4">
                           <label class="form-label" for="form2Example17">Email address</label>
                           <input type="email" id="email" name="email" class="form-control form-control-lg"  />
-                          <% if(locals.notEmail){%>
-                            <small class="text-danger"><%=notEmail%></small>
-                        <%}%>
+                        
                         </div>
       
                         <div class="form-outline mb-4">
@@ -65,5 +66,9 @@
           </div>
         </div>
       </section>
-     
+       
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"></script>
+  </body>
 </html>
