--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -25,53 +25,44 @@
                   </tr>
                 </thead>
                 <tbody>
+                  <% productData.forEach((product)=>{%>
                   <tr>
                     <td class="product-thumbnail">
-                      <img src="images/cloth_1.jpg" alt="Image" class="img-fluid">
+                      <a href="/shop"><img src="/adminImages/<%= product.productDetail._id %>.jpg" alt="Image" class="img-fluid"></a>
                     </td>
                     <td class="product-name">
-                      <h2 class="h5 text-black">Top Up T-Shirt</h2>
+                      <h2 class="h5 text-black"><%= product.productDetail.name %></h2>
                     </td>
-                    <td>$49.00</td>
-                    <td>
-                      <div class="input-group mb-3" style="max-width: 120px;">
-                        <div class="input-group-prepend">
-                          <button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
-                        </div>
-                        <input type="text" class="form-control text-center" value="1" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-                        <div class="input-group-append">
-                          <button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
-                        </div>
-                      </div>
+                    <td><%= product.productDetail.price%> ₹</td>
+                    <td  class="product-quantity">
+                      <div class="input-group mb-3 ml-4" style="max-width: 120px; ">
+                        
+                        <button class="btn btn-outline-primary js-btn-minus"
+                         onclick="changeQuantity('<%= product._id %>','<%= product.productDetail._id %>',-1)" type="button">&minus;</button>
 
-                    </td>
-                    <td>$49.00</td>
-                    <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
+                      <input id="<%= product.productDetail._id %>" type="text" class="form-control text-center" min="0" name="quantity" value="<%= product.productQuantity%>" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                      
+                        <button class="btn btn-outline-primary js-btn-plus" 
+                        onclick="changeQuantity('<%= product._id %>','<%= product.productDetail._id %>',1)" type="button">&plus;</button>
+                      
+                    </div>
+                    <% var a=product.productDetail.price%>
+											<% var b=product.productQuantity%>
+												<% var c=a*b %>
+													<td >
+														<%=c %> ₹
+													</td>
+                    <!-- <td><%= product.productDetail.price%> ₹</td> -->
+                    <!-- <td><a href="#" class="btn btn-primary btn-sm">X</a></td> -->
+                    <td class="product-remove">
+                      <button
+                      onclick="removeProduct('<%= product._id %>','<%= product.productDetail._id %>')">
+                        X</button>
+                  </td>
                   </tr>
 
-                  <tr>
-                    <td class="product-thumbnail">
-                      <img src="images/cloth_2.jpg" alt="Image" class="img-fluid">
-                    </td>
-                    <td class="product-name">
-                      <h2 class="h5 text-black">Polo Shirt</h2>
-                    </td>
-                    <td>$49.00</td>
-                    <td>
-                      <div class="input-group mb-3" style="max-width: 120px;">
-                        <div class="input-group-prepend">
-                          <button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
-                        </div>
-                        <input type="text" class="form-control text-center" value="1" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-                        <div class="input-group-append">
-                          <button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
-                        </div>
-                      </div>
-
-                    </td>
-                    <td>$49.00</td>
-                    <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
-                  </tr>
+                  <% }) %>
+                
                 </tbody>
               </table>
             </div>
@@ -114,7 +105,20 @@
                     <span class="text-black">Subtotal</span>
                   </div>
                   <div class="col-md-6 text-right">
-                    <strong class="text-black">$230.00</strong>
+                    <% if(locals.sum){%>
+                    <strong class="text-black"><%=sum%> ₹</strong>
+                    <%}%>
+                  </div> 
+                </div>
+    
+                <div class="row mb-5">
+                  <div class="col-md-6">
+                    <span class="text-black">Shipping Charge</span>
+                  </div>
+                  <div class="col-md-6 text-right">
+                    <% if(locals.sum) {%>
+                    <strong class="text-black"><%=0%> ₹</strong>
+                    <%}%>
                   </div>
                 </div>
                 <div class="row mb-5">
@@ -122,7 +126,9 @@
                     <span class="text-black">Total</span>
                   </div>
                   <div class="col-md-6 text-right">
-                    <strong class="text-black">$230.00</strong>
+                    <% if(locals.sum) {%>
+                    <strong class="text-black"><%=sum%> ₹</strong>
+                    <%}%>
                   </div>
                 </div>
 
