User Profile added

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
                   <div class="site-top-icons">
                     <ul>
                       
-                      <li><a href="#"><span class="icon icon-person"></li>
+                      <li><a href="/viewProfile"><span class="icon icon-person"></li>
                       <li><a href="#"><span class="icon icon-heart-o"></a></li>
                       <li>
                         
