--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -1,23 +1,33 @@
 <%-include("../partials/header")%>
-  <h1>Contact Us</h1>
-    <form class="formBox"  action="" method="post">
-        <div class="form-group">
-          <label for="exampleInputEmail1">Your Name</label>
-          <input type="name" class="form-control" id="customerName" >
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Your Email</label>
-          <input type="email" class="form-control" id="customerEmail" >
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Subject</label>
-            <input type="textArea" class="form-control" id="" >
+  <div class="breadcrumb-section breadcrumb-bg">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 offset-lg-2 text-center pt-5">
+          <div class="breadcrumb-text">
+            <h1>Contact us:</h1>
           </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Your Message</label>
-            <input type="textArea" class="form-control" id="customerEmail" >
-          </div>
-        <button type="submit" class="btn btn-primary">Send</button>
-      </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <form class="formBox " action="" method="post">
+    <div class="form-group">
+      <label for="exampleInputEmail1">Your Name</label>
+      <input type="name" class="form-control" id="customerName">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Your Email</label>
+      <input type="email" class="form-control" id="customerEmail">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Subject</label>
+      <input type="textArea" class="form-control" id="">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Your Message</label>
+      <input type="textArea" class="form-control" id="customerEmail">
+    </div>
+    <button type="submit" class="btn btn-primary">Send</button>
+  </form>
 
-      <%-include("../partials/footer")%>
+  <%-include("../partials/footer")%>
