--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -62,18 +62,6 @@
               </div>
 
               <div class="form-group">
-                <label for="c_create_account" class="text-black" data-toggle="collapse" href="/signup" role="button" aria-expanded="false" aria-controls="create_an_account"><input type="checkbox" value="1" id="c_create_account"> Create an account?</label>
-                <div class="collapse" id="create_an_account">
-                  <div class="py-2">
-                    <p class="mb-3">Create an account by entering the information below. If you are a returning customer please login at the top of the page.</p>
-                    <div class="form-group">
-                      <label for="c_account_password" class="text-black">Account Password</label>
-                      <input type="email" class="form-control" id="c_account_password" name="c_account_password" placeholder="">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
                 <label for="c_order_notes" class="text-black">Order Notes</label>
                 <textarea name="c_order_notes" id="c_order_notes" cols="30" rows="5" class="form-control" placeholder="Write your notes here..."></textarea>
               </div>
@@ -81,8 +69,7 @@
             </div>
           </div>
           <div class="col-md-6">
-
-            <div class="row mb-5">
+           <!-- <div class="row mb-5">
               <div class="col-md-12">
                 <h2 class="h3 mb-3 text-black">Coupon Code</h2>
                 <div class="p-3 p-lg-5 border">
@@ -97,8 +84,32 @@
 
                 </div>
               </div>
-            </div>
-            
+            </div> -->
+          
+            <div class="row mb-5">
+              <div class="col-md-12">
+                <h2 class="h3 mb-3 text-black">Shipping Address</h2>
+                <div class="p-3 p-lg-5 border">
+                  <div class="input-group w-75">
+                    <% userData.addressDetails.forEach((address)=>{%>
+                      <b name="address">
+                        <%= address.housename %>,
+                        <%= address.postoffice%><br>
+                        <%=address.area %><br>
+                        <%= address.district %>,
+                        <%= address.pin %><br>
+                        <%=address.state %>
+                      </b>
+                      <% }) %>
+                   
+                  </div>
+                  <button type="button" class="btn btn-secondary btn-sm mt-3" data-bs-toggle="modal"
+								data-bs-target="#exampleModal" data-bs-whatever="@mdo">
+								Add new address
+							</button>
+                </div>
+              </div>
+            </div>         
             <div class="row mb-5">
               <div class="col-md-12">
                 <h2 class="h3 mb-3 text-black">Your Order</h2>
