--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/adminSidebar')%>
+
 <%- include("../partials/adminHeader.ejs")%>
 
-<%- include("../partials/adminFooter.ejs")%>
+<%- include("../partials/footer.ejs")%>
