--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,14 @@
                     <ul>
                       
                       <li><a href="/viewProfile"><span class="icon icon-person"></li>
-                      <li><a href="#"><span class="icon icon-heart-o"></a></li>
+                      <li>
+                        <a href="/viewWishlist" class="site-cart">
+                          <span class="icon icon-heart-o"></span>
+                        <% if (locals.countInWishlist) { %>
+                         <span class="count"><%= countInWishlist %> </span>
+                        <% } %>
+                        
+                        </a></li>
                       <li>
                         
                           
@@ -49,32 +56,14 @@
           <nav class="site-navigation text-right text-md-center" role="navigation">
             <div class="container">
               <ul class="site-menu js-clone-nav d-none d-md-block">
-                <li class="has-children active">
+                <li >
                   <a href="/index">Home</a>
-                  <ul class="dropdown">
-                    <li><a href="#">Menu One</a></li>
-                    <li><a href="#">Menu Two</a></li>
-                    <li><a href="#">Menu Three</a></li>
-                    <li class="has-children">
-                      <a href="#">Sub Menu</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Menu One</a></li>
-                        <li><a href="#">Menu Two</a></li>
-                        <li><a href="#">Menu Three</a></li>
-                      </ul>
-                    </li>
-                  </ul>
                 </li>
-                <li class="has-children">
+                <li >
                   <a href="/about">About</a>
-                  <ul class="dropdown">
-                    <li><a href="#">Menu One</a></li>
-                    <li><a href="#">Menu Two</a></li>
-                    <li><a href="#">Menu Three</a></li>
-                  </ul>
                 </li>
                 <li><a href="/shop">Shop</a></li>
-                <li><a href="#">Catalogue</a></li>
+                <li><a href="/">My Orders</a></li>
                 <li><a href="/contact">Contact Us</a></li>
                <% if(customer){%>
                 <li><a href="/logout">Logout</a></li>
