--- a/views/user/about.ejs
+++ b/views/user/about.ejs
@@ -1,11 +1,13 @@
 <%-include("../partials/header")%>
-    <div class="bg-light py-3">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 mb-0"><a href="index.html">Home</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">About</strong></div>
-        </div>
-      </div>
-    </div>  
+ <!-- Breadcrumb -->
+ <nav aria-label="breadcrumb" class="main-breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/index">Home</a></li>
+    <li class="breadcrumb-item"><a href="javascript:void(0)">User</a></li>
+    <li class="breadcrumb-item active" aria-current="page">User Profile</li>
+  </ol>
+</nav>
+<!-- /Breadcrumb --> 
 
     <div class="site-section border-bottom" data-aos="fade">
       <div class="container">
