--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -1,33 +1,89 @@
 <%-include("../partials/header")%>
-  <div class="breadcrumb-section breadcrumb-bg">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 offset-lg-2 text-center pt-5">
-          <div class="breadcrumb-text">
-            <h1>Contact us:</h1>
+        <!-- Breadcrumb -->
+        <nav aria-label="breadcrumb" class="main-breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="/index">Home</a></li>
+              <li class="breadcrumb-item"><a href="javascript:void(0)">User</a></li>
+              <li class="breadcrumb-item active" aria-current="page">User Profile</li>
+            </ol>
+          </nav>
+          <!-- /Breadcrumb -->
+  <!--Section: Contact v.2-->
+<section class="mb-4">
+
+  <!--Section heading-->
+  <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+  <!--Section description-->
+  <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
+      a matter of hours to help you.</p>
+
+  <div class="row d-flex justify-content-center">
+
+      <!--Grid column-->
+      <div class="col-md-9 mb-md-0 mb-5">
+          <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+
+              <!--Grid row-->
+              <div class="row">
+
+                  <!--Grid column-->
+                  <div class="col-md-6">
+                      <div class="md-form mb-0">
+                          <input type="text" id="name" name="name" class="form-control">
+                          <label for="name" class="">Your name</label>
+                      </div>
+                  </div>
+                  <!--Grid column-->
+
+                  <!--Grid column-->
+                  <div class="col-md-6">
+                      <div class="md-form mb-0">
+                          <input type="text" id="email" name="email" class="form-control">
+                          <label for="email" class="">Your email</label>
+                      </div>
+                  </div>
+                  <!--Grid column-->
+
+              </div>
+              <!--Grid row-->
+
+              <!--Grid row-->
+              <div class="row">
+                  <div class="col-md-12">
+                      <div class="md-form mb-0">
+                          <input type="text" id="subject" name="subject" class="form-control">
+                          <label for="subject" class="">Subject</label>
+                      </div>
+                  </div>
+              </div>
+              <!--Grid row-->
+
+              <!--Grid row-->
+              <div class="row">
+
+                  <!--Grid column-->
+                  <div class="col-md-12">
+
+                      <div class="md-form">
+                          <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                          <label for="message">Your message</label>
+                      </div>
+
+                  </div>
+              </div>
+              <!--Grid row-->
+
+          </form>
+
+          <div class="text-center text-md-left">
+              <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
           </div>
-        </div>
+          <div class="status"></div>
       </div>
-    </div>
+ 
   </div>
-  <form class="formBox " action="" method="post">
-    <div class="form-group">
-      <label for="exampleInputEmail1">Your Name</label>
-      <input type="name" class="form-control" id="customerName">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Your Email</label>
-      <input type="email" class="form-control" id="customerEmail">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Subject</label>
-      <input type="textArea" class="form-control" id="">
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Your Message</label>
-      <input type="textArea" class="form-control" id="customerEmail">
-    </div>
-    <button type="submit" class="btn btn-primary">Send</button>
-  </form>
+
+</section>
+<!--Section: Contact v.2-->
 
   <%-include("../partials/footer")%>
